@@ -1,0 +1,31 @@
+[misc]
+download = 0
+logfile = /var/log/transmission-rss.log
+testing = 0
+run = 1
+
+[transmission]
+transmission_user = 
+transmission_pass = 
+transmission_client = 
+transmission_port = 9091
+
+[notification]
+fromaddr = 
+toaddrs = 
+smtpserver = 
+smtpport = 25
+
+[DB]
+dbuser = 
+dbhost = 
+dbname = 
+dbpass = 
+
+[filesystem]
+convertedfolder = 
+downloaddir = /var/lib/transmission-daemon/downloads/
+
+[rss]
+rssfeed = 
+
